EC2/ec2.tf
data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"] # Canonical
}

resource "aws_instance" "web" {
  ami                    = data.aws_ami.ubuntu.id
  instance_type          = "t3.micro"
  key_name               = aws_key_pair.terraform_key.key_name
  availability_zone      = "us-east-1a"
  vpc_security_group_ids = ["sg-031009520a18f273e"]
  subnet_id              = aws_subnet.public1.id

  tags = {
    Name = "HelloWorld"
  }
}
